# cc-discord-bot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  PROJECT_DIRECTION.md  Plans.md  README.md  RESEARCH.md  claude_task.txt  mcp-servers.json  mcp.json  run.bat  run.ps1  run.sh
.claude/logs/: subagent-history.jsonl
.claude/memory/: session-log.md
.claude/sessions/: .last_inbox_check  active.json
.claude/state/: generated-files.json  harness-usage.json  session-map.json  session-skills-used.json  session.events.jsonl  session.json  tooling-policy.json
.claude/state/pending-skills/: work.pending
.claude/state/sessions/: session-1771473553.events.jsonl  session-1771473553.json
cc-api/: package-lock.json  package.json
cc-api/src/: server.js
cc-bot/: Cargo.toml  Plans.md  run.sh
cc-bot/data/: channel_settings.db  memories.db  sessions.db  user_settings.db
cc-bot/output/2026-02-19/sakuchichi_200104211306905601/: test.txt
cc-bot/src/: api.rs  channel_settings.rs  datetime_utils.rs  glm.rs  history.rs  main.rs  mcp_client.rs  memory.rs  memory_store.rs  permission.rs  persistent_store.rs  rate_limiter.rs  role_config.rs  schedule_store.rs  scheduler.rs  session.rs  skills.rs  streaming.rs  tool.rs  user_roles.rs  user_settings.rs  validation.rs
cc-bot/src/commands/: admin.rs  ask.rs  clear.rs  memory_cmd.rs  mod.rs  permission.rs  schedule.rs  settings.rs  tools.rs
cc-bot/src/llm/: glm.rs  mock.rs  mod.rs
cc-bot/src/security/: logging.rs  mod.rs
cc-bot/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  list_files.rs  mcp.rs  mod.rs  read_file.rs  remember.rs  web_fetch.rs  write_file.rs
cc-cli/: Cargo.toml
cc-cli/src/: main.rs
data/: memories.db  sessions.db
docs/: README.md  architecture.md  configuration.md  permission-system.md  scheduler-and-api.md  session-and-memory.md  slash-commands.md  tools.md
investigation/: agent-discord-skills-analysis.md  api-endpoints.md  architecture-comparison.md  claude-agent-sdk-analysis.md  claude-code-discord-analysis.md  implementation-patterns.md
references/agent-discord-skills/: LICENSE  README.md  package.json
