[package]
name = "cc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"
cron = { version = "0.15.0", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
regex = "1"
# MCP Protocol support
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
# Web content extraction (readability)
legible = "0.4"
anyhow = "1"
# Security: Constant-time comparison for timing attack prevention
subtle = "2"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3"
